# email-code-finder

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py  config.example.json
src/email_code_finder/: __init__.py  client.py  finder.py
tests/: test_client.py  test_finder.py
