[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-code-finder"
version = "0.1.0"
description = "Extract any regex-matchable value (2FA/OTP codes, links, tokens, text) from an IMAP mailbox without deleting messages."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Erik Melias", email = "erikmelias@phac.com.br" },
]
keywords = [
    "imap",
    "email",
    "regex",
    "extract",
    "scraping",
    "2fa",
    "otp",
    "authentication",
    "token",
    "code",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Security",
]
# No third-party runtime dependencies: only the Python standard library is used.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/erikmelias/email-code-finder"
Repository = "https://github.com/erikmelias/email-code-finder"
Issues = "https://github.com/erikmelias/email-code-finder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
email_code_finder = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
